--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -1,6 +1,4 @@
 spring:
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
   application:
     name: CloudQuery
   data:
@@ -11,6 +9,17 @@ spring:
       port: ${MONGO_PORT:27017}
       username: ${MONGO_USERNAME}
       password: ${MONGO_PASSWORD}
+  datasource:
+    url: jdbc:postgresql://${POSTGRES_HOST}/${POSTGRES_DATABASE}
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
 
 openweathermap:
   apikey: ${OPENWEATHERMAP_APIKEY}
