--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -3,23 +3,20 @@ spring:
     name: CloudQuery
   data:
     mongodb:
-      database: cloud_query
+      database: ${MONGO_DB}
       authentication-database: admin
       host: ${MONGO_HOST}
       port: ${MONGO_PORT:27017}
       username: ${MONGO_USERNAME}
       password: ${MONGO_PASSWORD}
   datasource:
-    url: jdbc:postgresql://${POSTGRES_HOST}/${POSTGRES_DATABASE}
+    url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT:5432}/${POSTGRES_DB}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
 
 openweathermap:
   apikey: ${OPENWEATHERMAP_APIKEY}
+
+logging:
+  level:
+    com.github.prominence: DEBUG
