umime wrapnout current weather a ulozit do db hmm

--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ spring:
     url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT:5432}/${POSTGRES_DB}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
+  liquibase:
+    change-log: classpath:/db/changelog/db.changelog-master.xml
 
 openweathermap:
   apikey: ${OPENWEATHERMAP_APIKEY}
