--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -14,7 +14,8 @@ spring:
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
   liquibase:
-    change-log: classpath:/db/changelog/db.changelog-master.xml
+    enabled: false
+  # change-log: classpath:/db/changelog/db.changelog-master.xml
 
 openweathermap:
   apikey: ${OPENWEATHERMAP_APIKEY}
